# binoxxo-webapp

./: README.md  index.html  package-lock.json  package.json  webpack.config.js
crate/: Cargo.toml
crate/src/: lib.rs
js/: index.js
src/: index.js  main.scss
