[package]
authors = ["Martin Suesskraut <martin.suesskraut@gmail.com>"]
categories = ["wasm", "binoxxo", "puzzle", "game"]
description = "Binoxxo puzzle game as a single page webapp"
license = "Apache-2.0/MIT"
name = "binoxxo-webapp"
readme = "./README.md"
repository = "https://github.com/msuesskraut/binoxxo-webapp"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.5"
wasm-bindgen = "0.2.28"
binoxxo = { version = "0.1", features = ["wasm-bindgen"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "HtmlTableElement",
  "HtmlTableRowElement",
  "Node",
  "NodeList",
  "Window",
]

[features]
default-features = ["console_error_panic_hook", "wee_alloc"]
